# snapcast-control

./: Cargo.toml  README.md
examples/: simple.rs  with_callbacks.rs
resources/: protocol.md
src/: communication.rs  lib.rs  state.rs
src/protocol/: client.rs  de.rs  errors.rs  group.rs  mod.rs  notification.rs  request.rs  result.rs  server.rs  stream.rs
