[package]
name = "snapcast-control"
version = "0.1.2"
edition = "2024"
resolver = "3"
rust-version = "1.85"
description = "a wrapper for the Snapcast JSON-RPC Control API based on tokio"
repository = "https://github.com/JoeyEamigh/snapcast-control.git"
documentation = "https://docs.rs/snapcast-control"
homepage = "https://github.com/JoeyEamigh/snapcast-control"
keywords = ["snapcast", "api-client"]
readme = "README.md"
license = "MIT"

[dependencies]
dashmap = "6.1.0"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = { version = "3.16.1", features = ["json"] }
stubborn-io = "0.3.5"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["net", "io-util"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[package.metadata.docs.rs]
all-features = true

[lib]
doctest = false
